--- a/styles/partials/_typography.scss
+++ b/styles/partials/_typography.scss
@@ -1,6 +1,14 @@
 html {
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    font-size: 62.5%;
-    line-height: 1;
-  }
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 62.5%;
+  line-height: 1;
+}
+
+h1 {
+  margin-bottom: 3rem;
+}
+
+p {
+  line-height: 1.618;
+}
